--- a/themes/next/source/css/_custom/custom.styl
+++ b/themes/next/source/css/_custom/custom.styl
@@ -31,6 +31,13 @@
 	-webkit-box-shadow: 0 0 15px #590016;
 }
 
+// author name
+.site-author-name {
+    font-family: 'Comic Sans MS', sans-serif;
+    font-size: 20px;
+}
+
+
 // add post box shadow
 .post {
    margin-top: 60px;
