--- a/themes/next/source/css/_custom/custom.styl
+++ b/themes/next/source/css/_custom/custom.styl
@@ -37,6 +37,14 @@
     font-size: 20px;
 }
 
+// menu link  and hyperlink style
+a {
+    color: rgba(0,0,0,0.8);
+}
+a:hover {
+    color: #ff106c;
+    border-bottom-color: #ff106c;
+}
 
 // add post box shadow
 .post {
